# PonyPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.RTF  README.md  _how_to_code_8md.html  _how_to_commit_8md.html  _how_to_develop_8md.html  _l_i_c_e_n_s_e_8md.html  _q_m_linterface_8md.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  atomicops_8h.html  atomicops_8h.js  atomicops_8h_source.html  audioformat_8hpp.html  audioformat_8hpp.js  audioformat_8hpp_source.html  audiosink_8hpp.html  audiosink_8hpp.js  audiosink_8hpp_source.html  backward_8hpp.html  backward_8hpp_source.html  build_8py.html  build_8py.js  class_audio_frame-members.html  class_audio_frame.html  class_audio_frame.js  class_config-members.html  class_config.html  class_controller-members.html  class_controller.html  class_controller.js  class_count_down_latch-members.html  class_count_down_latch.html  class_count_down_latch.js  class_crash_reporter-members.html  class_crash_reporter.html  (+517 more)
.github/workflows/: build.yml  generate_doc.yml
assets/: ponyicon.rc
assets/filters/: contrast.json  flim.json  meta.json  video.json
cmake/: find_dependence.cmake  platform.cmake
config/: AppImageBuilder.yml  Doxyfile
debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
debug/cmake/portaudio/: portaudioConfigVersion.cmake  portaudioTargets.cmake
debug/src/: Makefile  cmake_install.cmake
debug/src/PonyPlayer_autogen/: moc_predefs.h  mocs_compilation.cpp
debug/src/audiosink/: Makefile  cmake_install.cmake
debug/src/config/: Makefile  cmake_install.cmake
debug/src/decoder/: Makefile  cmake_install.cmake
debug/src/example/: Makefile  cmake_install.cmake
debug/src/ffmpeg/: Makefile  cmake_install.cmake
debug/src/player/: Makefile  cmake_install.cmake  player.qmltypes  player_init.cpp  player_playerPlugin.cpp  player_qmltyperegistrations.cpp  qmldir
debug/src/playlist/: Makefile  cmake_install.cmake
debug/src/quickitem/: Makefile  cmake_install.cmake  qmldir  quickitem.qmltypes  quickitem_init.cpp  quickitem_qmltyperegistrations.cpp  quickitem_quickitemPlugin.cpp
debug/src/render/: Makefile  cmake_install.cmake  qmldir  render.qmltypes  render_init.cpp  render_qmltyperegistrations.cpp  render_renderPlugin.cpp
debug/src/tests/: Makefile  cmake_install.cmake  unit_tests  unit_tests[1]_include.cmake  unit_tests[1]_tests.cmake
docs/: HowToCode.md  HowToCommit.md  HowToDevelop.md  License.rtf  QMLinterface.md
include/: audiosink.h  blocking_queue.h  broadcast.h  config.h  controller.h  countdown_latch.h  demuxer.h  demuxer2.h  endpoint.h  example_header.h  fireworks.h  frame_queue.h  helper.h  hurricane.h  info_accessor.h  interpolate.h  kv_engine.h  logger.h  lyrics.h  netfind.h  packet_queue.h  playlist.h  quickitem.h  twins_queue.h  wave.h
package_test/: CMakeLists.txt  package_test.cpp
scripts/: build.py  package.py  setup.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  (+140 more)
src/: CMakeLists.txt  crashreporter.hpp  cursor.hpp  gtest.cmake  hotloader.hpp  main.cpp  platform.cmake
src/audiosink/: CMakeLists.txt  audiofomrat.hpp  audioformat.hpp  audiosink.cpp  audiosink.hpp  hotplug.cpp
src/audiosink/include/: audioformat.hpp  audiosink.h  hotplug.h
src/audiosink/private/: hotplug.hpp
src/config/: CMakeLists.txt
src/decoder/: CMakeLists.txt  backward.hpp  decoder.hpp  decoders.hpp  demuxer.hpp  dispatcher.hpp  forward.hpp  frame.hpp  helper.hpp  previewer.hpp
src/decoder/private/: backward.hpp  decoders.hpp  dispatcher.hpp  forward.hpp  previewer.hpp  virtual.hpp
src/example/: CMakeLists.txt  example_cpp.cpp
src/ffmpeg/: CMakeLists.txt  decoder.cpp  demuxer.cpp  demuxworker.cpp  dispatcher.cpp  info_accessor.cpp  save_frame.cpp  test_demuxer.cpp
src/interpolate/: CMakeLists.txt  interpolate.cpp
src/networking/: CMakeLists.txt  broadcast.cpp  endpoint.cpp  netfind.cpp
src/player/: CMakeLists.txt  fireworks.hpp  framecontroller.hpp  hurricane.hpp  playback.hpp  players.cpp  ponyslider.hpp  preview.hpp  renderer.hpp  thumbnail.hpp  updatevalue.hpp
src/player/include/: players.h
src/player/shader/: fragment.fsh  vertex.vsh
src/playlist/: CMakeLists.txt  controller.cpp  info_accessor.cpp  kv_engine.cpp  playlist.cpp
src/playlist/include/: controller.h  info_accessor.h  kv_engine.h
src/puremusic/: CMakeLists.txt  lyrics.cpp
src/quickitem/: CMakeLists.txt  demuxer.hpp  framecontroller.hpp  hurricane.hpp  playback.hpp  player.cpp  videoworker.cpp
src/render/: CMakeLists.txt  fireworks.cpp  hurricane.cpp
src/render/shader/: fragment.fsh  vertex.vsh
src/tests/: CMakeLists.txt  decoder_test.cpp  demuxer_test.cpp  example_test.cpp  frame_test.cpp  preview_test.cpp  reverse_test.cpp
src/utils/: CMakeLists.txt  blocking_queue.cpp  countdown_latch.cpp  helper.cpp  logger.cpp
src/utils/include/: logger.h  platform.hpp  ponyplayer.h  twins_queue.hpp
src/video/: CMakeLists.txt  video.cpp
src/view/: AdditionalSettings.qml  App.qml  ButtonColorAnimation.qml  CMakeLists.txt  CurrentFileItem.qml  DBus.qml  DownSizeChange.qml  FilterItem.qml  FramedImage.qml  IssueWindow.qml  LeftDownSizeChange.qml  LeftSizeChange.qml  LeftTopSizeChange.qml  MediaInfo.qml  PonyBody.qml  PonyFooteR.qml  PonyFooter.qml  RightDownSizeChange.qml  RightSizeChange.qml  RightTopSizeChange.qml  RoundImage.qml  SpeedMenu.qml  TopSizeChange.qml  TrackItem.qml  Wave.qml  interfacefunctions.js  main.qml  squircle.cpp  squircle.h  videoSliderOperate.md
src/view/shader/: roundImage.frag  roundImage.frag.qsb
src/wave/: CMakeLists.txt  lyrics.cpp  wave.cpp  wave.hpp
src/wave/include/: lyrics.h
(+159 files in other folders)
